unit tests p.4